--- a/assistant.html
+++ b/assistant.html
@@ -137,7 +137,7 @@
                         <li class="header__item"><a href="#" class="header__link">HOME</a>
                             <div class="hover-items">
                                 <ul class="hover-items__list">
-                                    <li class="subitem"><a class="subitem-link" href="#">About Edugain
+                                    <li class="subitem"><a class="subitem-link" href="assistant.html">About Edugain
                                             Overseas</a></li>
                                     <li class="subitem"><a class="subitem-link" href="#">Our services</a></li>
                                     <li class="subitem"><a class="subitem-link" href="#">About Edugain Overseas</a></li>
@@ -229,7 +229,7 @@
 
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>HOME</span><img
+                                <div class=" drop-down__header"><span>HOME</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -244,7 +244,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -257,7 +258,7 @@
                         </details>
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>RUSSIA</span><img
+                                <div class=" drop-down__header"><span>RUSSIA</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -272,7 +273,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -285,7 +287,7 @@
                         </details>
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>UKRAINE</span><img
+                                <div class=" drop-down__header"><span>UKRAINE</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -300,7 +302,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -313,7 +316,7 @@
                         </details>
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>UNIVERSITIES</span><img
+                                <div class=" drop-down__header"><span>UNIVERSITIES</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -328,7 +331,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -341,7 +345,7 @@
                         </details>
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>STUDY & LIVING</span><img
+                                <div class=" drop-down__header"><span>STUDY & LIVING</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -356,7 +360,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -373,7 +378,7 @@
 
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>ADMISSIONS</span><img
+                                <div class=" drop-down__header"><span>ADMISSIONS</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -388,7 +393,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -401,7 +407,7 @@
                         </details>
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class="drop-down__header"><span>SEE DETALIS</span><img
+                                <div class="drop-down__header"><span>SEE DETALIS</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -416,7 +422,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -429,7 +436,7 @@
                         </details>
                         <details class="navigation-menu__drop-down">
                             <summary>
-                                <div class=" drop-down__header"><span>VISA & ARRIVAL</span><img
+                                <div class=" drop-down__header"><span>VISA & ARRIVAL</span><img class="summary-arrow"
                                         src="./img/icons/menu-item-arr.svg" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
@@ -444,7 +451,8 @@
                                 <hr class="drop-down__line-small">
                                 <li class="drop-down__item"><a class="drop-down__link" href="#"><img
                                             class="drop-down__link-icon" src="./img/icons/link arr small.svg"
-                                            alt=">"><span>Admission Prcer</span></a>
+                                            alt=">"><span>Admission
+                                            Prcer</span></a>
 
                                 </li>
                                 <hr class="drop-down__line-small">
@@ -458,7 +466,7 @@
                         <details class="navigation-menu__drop-down">
                             <summary>
                                 <div class=" drop-down__header"><span>FAQ</span><img src="./img/icons/menu-item-arr.svg"
-                                        alt=">">
+                                        class="summary-arrow" alt=">">
                                 </div>
                                 <hr class="drop-down__line">
                             </summary>
