--- a/index.html
+++ b/index.html
@@ -1470,12 +1470,14 @@
         </div>
     </section>
     <section class="gallery">
-        <div class="title-block">
-            <h3 class="title-block__header">
-                COURSES AVAILABLE
-            </h3>
-            <div class="line">
-                <span class="line-circle"></span>
+        <div class="container">
+            <div class="title-block">
+                <h3 class="title-block__header">
+                    COURSES AVAILABLE
+                </h3>
+                <div class="line">
+                    <span class="line-circle"></span>
+                </div>
             </div>
         </div>
         <button class="gallery-slider-mobile gallery-slider-mobile--prev"><img
