--- a/index.html
+++ b/index.html
@@ -1559,6 +1559,7 @@
                             <div class="feedback-item__headers">
                                 <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
                                 <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                                <hr class="feedback-item__line">
                             </div>
 
                             <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
