--- a/index.html
+++ b/index.html
@@ -1548,8 +1548,6 @@
                     <img src="./img/icons/“.svg" alt="''">
                 </div>
                 <div class="feedback-slider__inner">
-
-
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
                             <div class="feedback-item__img">
@@ -1558,33 +1556,7 @@
 
                             <div class="feedback-item__headers">
                                 <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
-                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
                                 <hr class="feedback-item__line">
-                            </div>
-
-                            <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
-                                much,
-                                especially Ms. Ekateryna, who has been there for me during the whole application
-                                period.
-                                I
-                                received the Invitation Letter and the study visa last summer, and I am currently on
-                                my
-                                second year studying International Law at Chechen State University. Local people and
-                                other
-                                students are nice and friendly, the cuisine is delicious, and there are actually
-                                many
-                                places
-                                to visit in Grozny! Thank you once again!</p>
-                        </div>
-                    </div>
-                    <div class="feedback-item">
-                        <div class="feedback-item__inner">
-                            <div class="feedback-item__img">
-                                <img src=" ./img/photo/feedback-img.png" alt="feedback">
-                            </div>
-
-                            <div class="feedback-item__headers">
-                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
                                 <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
                             </div>
 
@@ -1611,6 +1583,34 @@
 
                             <div class="feedback-item__headers">
                                 <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                                <hr class="feedback-item__line">
+                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                            </div>
+
+                            <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
+                                much,
+                                especially Ms. Ekateryna, who has been there for me during the whole application
+                                period.
+                                I
+                                received the Invitation Letter and the study visa last summer, and I am currently on
+                                my
+                                second year studying International Law at Chechen State University. Local people and
+                                other
+                                students are nice and friendly, the cuisine is delicious, and there are actually
+                                many
+                                places
+                                to visit in Grozny! Thank you once again!</p>
+                        </div>
+                    </div>
+                    <div class="feedback-item">
+                        <div class="feedback-item__inner">
+                            <div class="feedback-item__img">
+                                <img src=" ./img/photo/feedback-img.png" alt="feedback">
+                            </div>
+
+                            <div class="feedback-item__headers">
+                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                                <hr class="feedback-item__line">
                                 <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
                             </div>
 
@@ -1645,14 +1645,12 @@
     <footer class="footer">
         <div class="footer-decarate"></div>
         <div class="telephones">
-            <!-- <div class="telephones__wrap"> -->
             <img src="./img/icons/telephone.svg" class="telephones__icon" alt="tel">
             <div class="telephones__inner">
                 <a href="tel:+380637909294" class="telephones__link">+38 (063) 790-92-94</a>
                 <a href="tel:+79092077688" class="telephones__link telephones__link--rus">+7 (909)
                     207-76-88</a>
             </div>
-            <!-- </div> -->
         </div>
         <div class="container">
             <h3 class="form-title">Or fill in the form</h3>
@@ -1677,24 +1675,30 @@
                         <li>
                             <h3 class="footer-item__title">Quick Navigation</h3>
                         </li>
-                        <li><a class="footer-item__subtitle" href="#">Courses</a></li>
-                        <li><a class="footer-item__subtitle" href="#">Universities</a></li>
-                        <li><a class="footer-item__subtitle" href="#">Admission process</a></li>
-                        <li><a class="footer-item__subtitle" href="#">How to obtain visa</a></li>
-                        <li><a class="footer-item__subtitle" href="#">Apply online</a></li>
+                        <li class="footer-item__list-item"><a class="footer-item__subtitle footer-item__hover-link"
+                                href="#">Courses</a></li>
+                        <li class="footer-item__list-item"><a class="footer-item__subtitle footer-item__hover-link"
+                                href="#">Universities</a></li>
+                        <li class="footer-item__list-item"><a class="footer-item__subtitle footer-item__hover-link"
+                                href="#">Admission process</a></li>
+                        <li class="footer-item__list-item"><a class="footer-item__subtitle footer-item__hover-link"
+                                href="#">How to obtain visa</a></li>
+                        <li class="footer-item__list-item"><a class="footer-item__subtitle footer-item__hover-link"
+                                href="#">Apply online</a></li>
                     </ul>
 
                 </div>
                 <div class="footer-item footer-item--contact">
                     <h3 class="footer-item__title">Contact us</h3>
-                    <h4 class="footer-item__subtitle">For Admissions:</h4>
+                    <h4 class="footer-item__subtitle footer-item__subtitle--item ">For Admissions:</h4>
                     <a href="tel:+380637909294" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
                     </a>
                     <a href="tel:+79092077688" class="footer-item__link"> WhatsApp: +7 909 207 76 88
                     </a>
                     <a href="" class="footer-item__link"> Email: admissions@edugainoverseas.com
                     </a>
-                    <h4 class="footer-item__subtitle footer-item__subtitle--last">For Cooperation:</h4>
+                    <h4 class="footer-item__subtitle footer-item__subtitle--item footer-item__subtitle--last">For
+                        Cooperation:</h4>
                     <a href="tel:+380637909294" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
                     </a>
                     <a href="mailto:admissions@edugainoverseas.com" class="footer-item__link"> Email:
