--- a/assistant.html
+++ b/assistant.html
@@ -1198,7 +1198,7 @@
             <form action="" class="footer-form">
                 <input type="text" placeholder="First Name" class="footer-form__input footer-form__input--name">
                 <input type="email" placeholder="Email Adress" class="footer-form__input footer-form__input--email">
-                <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
+                <input type="tel" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
                 <input type="text" placeholder="Country" class="footer-form__input footer-form__input--country">
                 <input type="submit" class="footer-form__btn" value="Request Info">
             </form>
